welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: ')' expected but 'return' found.
  return nb
  ^