welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nb : Int = 0
  for (k <- 1 to num.length {
    if (num(k)>num(k-1)) {nb = nb +1}
  }
  return nb
}